Update and rename wibu.html to foto.html

--- a/foto.html
+++ b/foto.html
@@ -11,9 +11,9 @@
 			<div class="toggle" onclick="toggleMenu();"></div>
 			<ul class="navigation">
 				<li><a href="ini.html" style="--i:1;">Home</a></li>
-				<li><a href="#" style="--i:2;">For Wibu</a></li>
+				<li><a href="#" style="--i:2;">Gallery</a></li>
 				<li><a href="kalender.html" style="--i:3;">Kalender</a></li>
-				<li><a href="#" style="--i:4;">Games</a></li>
+				<li><a href="#" style="--i:4;">School work</a></li>
 				<li><a href="#" style="--i:5;">More</a></li>
 			</ul>
 		</header>
