--- a/ini.html
+++ b/ini.html
@@ -14,7 +14,7 @@
 			<div class="toggle" onclick="toggleMenu();"></div>
 			<ul class="navigation">
 				<li><a href="#" style="--i:1;">Home</a></li>
-				<li><a href="wibu.html" style="--i:2;">For Wibu</a></li>
+				<li><a href="foto.html" style="--i:2;">Gallery</a></li>
 				<li><a href="kalender.html" style="--i:3;">Kalender</a></li>
 				<li><a href="#" style="--i:4;">Games</a></li>
 				<li><a href="#" style="--i:5;">More</a></li>
