--- a/fotoo.html
+++ b/fotoo.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
-    <title>Heroes | Responsive Movie Landing Page Design</title>
+    <title>Fiannn14 | Responsive Movie Landing Page Design</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<section>
