--- a/foto.html
+++ b/foto.html
@@ -14,7 +14,7 @@
 				<li><a href="ini.html" style="--i:1;">Home</a></li>
 				<li><a href="#" style="--i:2;">Gallery</a></li>
 				<li><a href="kalender.html" style="--i:3;">Kalender</a></li>
-				<li><a href="#" style="--i:4;">School work</a></li>
+				<li><a href="#" style="--i:4;">WebDesign</a></li>
 				<li><a href="#" style="--i:5;">More</a></li>
 			</ul>
 		</header>
