--- a/ini.html
+++ b/ini.html
@@ -16,7 +16,7 @@
 				<li><a href="#" style="--i:1;">Home</a></li>
 				<li><a href="foto.html" style="--i:2;">Gallery</a></li>
 				<li><a href="kalender.html" style="--i:3;">Kalender</a></li>
-				<li><a href="#" style="--i:4;">Games</a></li>
+				<li><a href="#" style="--i:4;">WebDesign</a></li>
 				<li><a href="#" style="--i:5;">More</a></li>
 			</ul>
 
