--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		</header>
 		<div class="foto">
-		    <img src="image/ikon.jpg" width="150" height="150" style="border-radius: 50%;">
+		    <img src="image/icon.jpg" width="150" height="150" style="border-radius: 50%;">
 		</div>
 		<div>
 		    <h2>Overview</h2>
