--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<ul class="navigation">
 				<li><a href="#" style="--i:1;">Home</a></li>
 				<li><a href="foto.html" style="--i:2;">Gallery</a></li>
-				<li><a href="kalender.html" style="--i:3;">Kalender</a></li>
-				<li><a href="#" style="--i:4;">WebDesign</a></li>
-				<li><a href="#" style="--i:5;">More</a></li>
+				<li><a href="kalender.html" style="--i:3;">Calendar</a></li>
+				<li><a href="school.html" style="--i:4;">Zip School</a></li>
+				<li><a href="batch.html" style="--i:5;">Batch</a></li>
 			</ul>
 
 		</header>
