--- a/batch.html
+++ b/batch.html
@@ -1,7 +1,9 @@
 <!doctype html>
+
 <html>
+
 <head>
-    <title>Fiannn14 | Responsive Movie Landing Page Design</title>
+    <title>Heroes | Responsive Movie Landing Page Design</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -12,33 +14,20 @@
 			<div class="toggle" onclick="toggleMenu();"></div>
 			<ul class="navigation">
 				<li><a href="index.html" style="--i:1;">Home</a></li>
-				<li><a href="#" style="--i:2;">Gallery</a></li>
-				<li><a href="kalender.html" style="--i:3;">Kalender</a></li>
+				<li><a href="foto.html" style="--i:2;">Gallery</a></li>
+				<li><a href="kalender.html" style="--i:3;">Calendar</a></li>
 				<li><a href="school.html" style="--i:4;">Zip School</a></li>
-				<li><a href="#" style="--i:5;">More</a></li>
+				<li><a href="#" style="--i:5;">Batch</a></li>
 			</ul>
+
 		</header>
-		<div class="container">
-			<div class="box" style="--i:3;">
-				<div class="imgBx">
-					<img src="image/photo1 (1).jpg">
-				</div>
-			</div>
-			<div class="box" style="--i:4;">
-				<div class="imgBx">
-					<img src="image/photo1 (2).jpg">
-				</div>
-			</div>
-			<div class="box" style="--i:5;">
-				<div class="imgBx">
-					<img src="image/photo1 (3).jpg">
-				</div>
-			</div>
-			<div class="box" style="--i:6;">
-				<div class="imgBx">
-					<img src="image/photo1 (4).jpg">
-				</div>
-			</div>
+		<div class="foto">
+		    <img src="image/sampul.png" class="sampul" >
+		</div><br>
+        <br><hr>
+        <h3><font>Download zip</font></h3>
+		<div class="file">
+            <div></div>
 		</div>
 		<div class="footer">
 			<ul class="sci">
@@ -64,4 +53,3 @@
 	</script>
 </body>
 </html>
-
