--- a/school.html
+++ b/school.html
@@ -31,14 +31,15 @@
                 <h4><b>Tugas Basisdata</b></h4>
                 <p>Tanggal tugas :</p>
                 <ul>
-                    <li>-> 25 Juli 2022 /> <a href="/download/databasetask.rar">Download</a></li>
+                    <li>-> 25 Juli 2022 /> <a href="/Download/databasetask.rar">Download</a></li>
+		    <li>-> 25 Juli 2022 /> <a href="/Download/24_MOCHAMAD ALLIFIAN AR'RASYID.txt">Download</a></li>
                 </ul>
             </div>
             <div class="file-2">
                 <h4><b>Tugas Matematika</b></h4>
                 <p>Tanggal tugas :</p>
                 <ul>
-                    <li>-> 1 Agustus 2022 /> <a href="#">Download</a></li>
+                    <li>-> 1 Agustus 2022 /> <a href="Download/MochamadAllifianArrasyid.xlsx">Download</a></li>
                 </ul>
             </div>
 		</div>
