--- a/school.html
+++ b/school.html
@@ -32,7 +32,7 @@
                 <p>Tanggal tugas :</p>
                 <ul>
                     <li>-> 25 Juli 2022 /> <a href="/Download/databasetask.rar">Download</a></li>
-		    <li>-> 25 Juli 2022 /> <a href="/Download/24_MOCHAMAD ALLIFIAN AR'RASYID.txt">Download</a></li>
+		    <li>-> 8 Agustus 2022 /> <a href="/Download/24_MOCHAMAD ALLIFIAN AR'RASYID.txt" target="_blank">Download</a></li>
                 </ul>
             </div>
             <div class="file-2">
@@ -45,9 +45,9 @@
 		</div>
 		<div class="footer">
 			<ul class="sci">
-				<li><a href="https://www.facebook.com/fian.frefayer" style="--i:9">Facebook</a></li>
-				<li><a href="https://mobile.twitter.com/fiannnn14" style="--i:8">Twitter</a></li>
-				<li><a href="https://www.instagram.com/fiannn14_/" style="--i:7">Instagram</a></li>
+				<li><a href="https://www.facebook.com/fian.frefayer" style="--i:9" target="_blank">Facebook</a></li>
+				<li><a href="https://mobile.twitter.com/fiannnn14" style="--i:8" target="_blank">Twitter</a></li>
+				<li><a href="https://www.instagram.com/fiannn14_/" style="--i:7" target="_blank">Instagram</a></li>
 			</ul>
 			<p class="copyrightText">©Mochamad Allifian Ar'rasyid. 2022</p>
 		</div>
