--- a/foto.html
+++ b/foto.html
@@ -15,7 +15,7 @@
 				<li><a href="#" style="--i:2;">Gallery</a></li>
 				<li><a href="kalender.html" style="--i:3;">Kalender</a></li>
 				<li><a href="school.html" style="--i:4;">Zip School</a></li>
-				<li><a href="#" style="--i:5;">More</a></li>
+				<li><a href="batch.html" style="--i:5;">Batch</a></li>
 			</ul>
 		</header>
 		<div class="container">
