--- a/kalender.html
+++ b/kalender.html
@@ -27,6 +27,6 @@
     document.querySelector(".date-number").innerHTML = dayNumber;
     document.querySelector(".year").innerHTML = year;
     </script>
-    <a href="ini.html">Kembali</a>
+    <a href="index.html">Kembali</a>
   </body>
 </html>
