--- a/foto.html
+++ b/foto.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Fiannn14 | Responsive Movie Landing Page Design</title>
+    <title>Fiannn14 | Koleksi Wallpaper</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
