--- a/school.html
+++ b/school.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Heroes | Responsive Movie Landing Page Design</title>
+    <title>Fian014 | Hasil Tugas Sekolah</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
