--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		    <p>Perkenalkan,</p>
 		    <p>Nama : Mochamad Allifian Ar'rasyid</p>
 		    <p>Code : #14</p>
+			<p><a href="https://kodular.app/MPH-PRK" style="color : white;">Download Aplikasi</a></p>
 		</div>
 		<div class="footer">
 			<ul class="sci">
