--- a/WebP.html
+++ b/WebP.html
@@ -14,6 +14,15 @@
       href="https://avatars.githubusercontent.com/u/78087246?v=4"
     />
     <link rel="stylesheet" href="./img/coki.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RDW0KJP9X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3RDW0KJP9X');
+    </script>
     <!-- Title -->
     <title>🌴 ・ Fiannn14</title>
   </head>
