--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="link-style.css">
-    <title>Profile | Fian014</title>
+    <title>LinkMedia | Fian014</title>
 </head>
 <body>
     <section class="nav" id="sidebar">
