--- a/WebP.html
+++ b/WebP.html
@@ -169,7 +169,7 @@
       </div>
       <div class="main-content">
         <h2>Reaksi anda?</h2>
-        <button type="submit" name="cool"><h3>Shessh🥶</h3></button>
+        <button type="submit" name="cool"><h3>Video yang cukup menarik untuk dilihat</h3></button>
         <button type="submit" name="baja"><h3>Tidak Menarik😒</h3></button>
       </div>
     </div>
