--- a/index.html
+++ b/index.html
@@ -1,71 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="link-style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/android-icon-192x192.png"
+    />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="link-style.css" />
     <title>LinkMedia | Fian014</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="nav" id="sidebar">
-        <img src="img/fian014.gif" alt="foto profil" title="Fian Gemink">
-        <h2>Fian014</h2>
+      <img src="img/fian014.gif" alt="foto profil" title="Fian Gemink" />
+      <h2>Fian014</h2>
     </section>
     <div class="nav-link">
-        <ul>
-            <li><a href="https://fian014.github.io" target="_blank">Other Web</a></li>
-            <li><a href="#popup">about</a></li>
-        </ul>
-    </div> <br> <br>
-    <br>
+      <ul>
+        <li>
+          <a href="https://fian014.github.io" target="_blank">Other Web</a>
+        </li>
+        <li><a href="#popup">about</a></li>
+      </ul>
+    </div>
+    <br />
+    <br />
+    <br />
     <div id="popup">
-        <div class="window">
-            <a href="#" class="close-button" title="Close">X</a>
-            <h3>Description...</h3>
-            <p>Web ini hanya tiruan dari web <b>linktree</b></p>
-        </div>
+      <div class="window">
+        <a href="#" class="close-button" title="Close">X</a>
+        <h3>Description...</h3>
+        <p>Web ini hanya tiruan dari web <b>linktree</b></p>
+      </div>
     </div>
     <div class="contex" id="maincontent">
-        <div class="btnLink">            
-            <img src="./img/instagram (1).png" alt="ig">
-            <p><a href="https://instagram.com/fiannn14_" target="_blank">fiannn14_</a></p>    
+      <div class="btnLink">
+        <div class="desc link">
+          <h4>
+            <a href="https://instagram.com/fiannn14_" target="_blank"
+              ><img src="./img/instagram (1).png" alt="ig" /><b
+                >Instagram</b
+              ></a
+            >
+          </h4> <br>
+        </div> 
+        <div class="desc text">
+            <p>
+              Username instagram saya adalah <i>fiannn14_</i>.
+            </p>
+          </div>
+      </div>
+      <div class="btnLink">
+        <div class="desc link">
+          <h4>
+            <a href="https://mobile.twitter.com/fiannnn14" target="_blank"
+              ><img src="./img/twitter.png" alt="tw" /><b>Twitter</b></a
+            >
+          </h4> <br>
+        </div> 
+        <div class="desc text">
+          <p>
+            Untuk twitter usernamenya cukup panjang yaitu <i>fiannnn14</i>.
+          </p>
         </div>
-        <div class="btnLink">            
-            <img src="./img/facebook (1).png" alt="ig">
-            <p><a href="https://web.facebook.com/fian.frefayer" target="_blank">Allifian</a></p>
+      </div>
+
+      <div class="btnLink">
+        <div class="desc link">
+          <h4>
+            <a href="https://github.com/fianbro" target="_blank"
+              ><img
+                src="./img/github.png"
+                alt="git"
+                style="background-color: #eaeaea; border-radius: 50%"
+              /><b>Github</b></a
+            >
+          </h4> <br>
+        </div> 
+        <div class="desc text">
+          <p>
+            Github usernamenya <i>fianeunoia</i>.(cukup rumit bahkan untuk pemilik akunnya sendiri)
+          </p>
         </div>
-        <div class="btnLink">            
-            <img src="./img/twitter.png" alt="ig">
-            <p><a href="https://mobile.twitter.com/fiannnn14" target="_blank">fiannnn14_</a></p>
-        </div>
-        
-        <div class="btnLink">            
-            <img src="./img/github.png" alt="ig">
-            <p><a href="https://github.com/fianbro" target="_blank">fiannn14_</a></p>
-        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
 <!-- <p><a href="https://instagram.com/fiannn14_" id="ig">My Instagram</a></p>
         <p><a href="https://facebook.com/" id="fb">My Facebook</a></p>
         <p><a href="https://youtube.com/" id="yt">My Youtube</a></p>
         <p><a href="https://github.com/fianbro" id="gt">My Github</a></p> -->
-    
