--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     <div id="popup">
       <div class="window">
         <a href="#" class="close-button" title="Close">X</a>
-        <h3>Description...</h3>
-        <p>Web ini hanya tiruan dari web <b>linktree</b></p>
+        <h3>Deskripsi</h3>
+        <p>Halaman <a href="https:fianeunoia.github.io/WebP"><b>WebP</b></a></p>
+        <!-- <p>Halaman <a href="#"><b></b></a></p>         -->
       </div>
     </div>
     <div class="contex" id="maincontent">
