--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div> 
         <div class="desc text">
             <p>
-              Username: <i>fiannn14_</i>.
+              Username: <i>fiannn14_</i>
             </p>
           </div>
       </div>
@@ -100,7 +100,7 @@
         </div> 
         <div class="desc text">
           <p>
-            Username: <i>fiannnn14</i>.
+            Username: <i>fiannnn14</i>
           </p>
         </div>
       </div>
@@ -119,7 +119,7 @@
         </div> 
         <div class="desc text">
           <p>
-            Username <i>fianeunoia</i>.(cukup rumit bahkan untuk pemilik akunnya sendiri)
+            Username <i>fianeunoia</i>
           </p>
         </div>
       </div>
