--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="window">
         <a href="#" class="close-button" title="Close">X</a>
         <h3>Deskripsi</h3>
-        <p>Halaman <a href="https://fianeunoia.github.io/WebP"><b>WebP</b></a></p>
+        <p>Halaman <a href="https://fianeunoia.github.io/WebP" style="text-decoration: none; color: #b0f0f0;"><b>WebP</b></a></p>
         <!-- <p>Halaman <a href="#"><b></b></a></p>         -->
       </div>
     </div>
