--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="nav-link">
       <ul>
         <li>
-          <a href="https://fian014.github.io" target="_blank">Other Web</a>
+          <a href="https://fian014.site" target="_blank">Other Web</a>
         </li>
         <li><a href="#popup">about</a></li>
       </ul>
