--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       font-family: 'Lato', sans-serif;
       width: 100%;
       height: 100vh;
-      background: #ef798a;
+      background: #f7a9a8;
     }
     .profile {
       position: fixed;
