--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
       align-items: center;
       flex-direction: column;
       position: relative;
+      text-align: center;
       height: 35%;
       width: 70%;
       padding: 20px;
       color: #fff;
+      text-shadow: 4px 4px 6px #000;
       border-radius: 20px;
       background: #ef798a;
       box-shadow:  20px 20px 60px #cb6775,
@@ -113,7 +115,7 @@
     </div>
     <div class="space"></div>
     <div class="fromme animate__animated animate__backInDown">
-      <h1 class="animate__animated animate__hinge animate__delay-5s">Jangan terlalu berharap jika tidak ingin <b>kecewa</b></h1>
+      <h2 class="animate__animated animate__hinge animate__delay-5s">Jangan terlalu berharap jika tidak ingin <b>kecewa</b></h2>
       <!--<video id="myVideo">
         <source src="https://fiancuy.my.id/gifmalas.webp" type="video/webp" />
         Your browser not support bang
