--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- HTML Meta Tags -->
-    <title>Fian14 | Profile</title>
-    <meta name="description" content="undefined" />
+    <title>Fian14 | ANIME</title>
+    <meta name="description" content="UI ANIME" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://fian014.site/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Fian14 | Profile" />
-    <meta property="og:description" content="undefined" />
+    <meta property="og:title" content="Fian14 | ANIME" />
+    <meta property="og:description" content="UI ANIME" />
     <meta property="og:image" content="" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="fian014.site" />
     <meta property="twitter:url" content="https://fian014.site/" />
-    <meta name="twitter:title" content="Fian14 | Profile" />
-    <meta name="twitter:description" content="undefined" />
+    <meta name="twitter:title" content="Fian14 | ANIME" />
+    <meta name="twitter:description" content="UI ANIME" />
     <meta name="twitter:image" content="" />
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./src/css/index.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
     <title>UI Fian</title>
   </head>
   <body>
@@ -35,22 +37,22 @@
         <nav class="co-nav">
           <strong id="name"></strong>
           <ul>
-            <li><a href="https://">F</a></li>
-            <li><a href="https://">I</a></li>
-            <li><a href="https://">T</a></li>
-            <li><a href="https://">G</a></li>
+            <li><a href="https://" title="My Github" class="bi bi-github"></a></li>
+            <li><a href="https://" title="My Twitter" class="bi bi-twitter"></a></li>
+            <li><a href="https://" title="My Instagram" class="bi bi-instagram"></a></li>
           </ul>
         </nav>
         <div class="co-body">
-          <!-- <h2 id="ip">198.389.28.27</h2> -->
           <span id="date"></span>
           <span id="tgl"></span>
+          <span id="ip"></span>
           <br />
           <br />
           <button onclick="inputName()">Add Name</button>
         </div>
       </div>
     </div>
+
     <script type="application/javascript">
       function getIP(json) {
         let ip = document.getElementById("ip");
@@ -62,6 +64,7 @@
       type="application/javascript"
       src="https://api.ipify.org?format=jsonp&callback=getIP"
     ></script>
-    <script src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
