--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="" />
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    <link rel="stylesheet" href="./src/css/index.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
     <title>UI Fian</title>
@@ -65,6 +65,6 @@
       src="https://api.ipify.org?format=jsonp&callback=getIP"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
-    <script src="./src/js/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
