--- a/Tutorial.html
+++ b/Tutorial.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- HTML Meta Tags -->
+    <title>Fian14 | ANIME</title>
+    <meta name="description" content="Tutorial manip with app PiscayPro" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://fian014.site/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Fian14 | ANIME" />
+    <meta property="og:description" content="UI ANIME" />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="fian014.site" />
+    <meta property="twitter:url" content="https://fian014.site/" />
+    <meta name="twitter:title" content="Fian14 | ANIME" />
+    <meta name="twitter:description" content="UI ANIME" />
+    <meta name="twitter:image" content="" />
     <title>Maaf Kalo Jelek</title>
   </head>
   <style>
