--- a/index.html
+++ b/index.html
@@ -25,46 +25,10 @@
     <meta name="twitter:image" content="" />
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    <link rel="stylesheet" href="./index.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
     <title>UI Fian</title>
   </head>
   <body>
-    <div class="c">
-      <div class="cb"></div>
-      <div class="c__co">
-        <nav class="co-nav">
-          <strong id="name"></strong>
-          <ul>
-            <li><a href="https://" title="My Github" class="bi bi-github"></a></li>
-            <li><a href="https://" title="My Twitter" class="bi bi-twitter"></a></li>
-            <li><a href="https://" title="My Instagram" class="bi bi-instagram"></a></li>
-          </ul>
-        </nav>
-        <div class="co-body">
-          <span id="date"></span>
-          <span id="tgl"></span>
-          <span id="ip"></span>
-          <br />
-          <br />
-          <button onclick="inputName()">Add Name</button>
-        </div>
-      </div>
-    </div>
-
-    <script type="application/javascript">
-      function getIP(json) {
-        let ip = document.getElementById("ip");
-        ip.innerText = "Your IP is " + json.ip;
-      }
-    </script>
-
-    <script
-      type="application/javascript"
-      src="https://api.ipify.org?format=jsonp&callback=getIP"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
-    <script src="./index.js"></script>
+    <h2>const name = Fian</h2>
+    <h1>`Hello World! I'm ${name}`</h1>
   </body>
 </html>
