--- a/gogoblesan/eps2/index.html
+++ b/gogoblesan/eps2/index.html
@@ -81,6 +81,12 @@
           >
             Perbarui Konten
           </button>
+          <button
+            class="inline-block mt-2 cursor-pointer rounded-md bg-primary px-4 py-3 text-center text-sm font-semibold uppercase text-white transition duration-200 ease-in-out hover:bg-white hover:text-primary mx-auto w-full"
+            onClick="defaultStyle()"
+          >
+            Default
+          </button>
         </div>
       </div>
     </section>
