--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <title>UI Fian</title>
   </head>
-  <body>
+  <body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <h2>const name = Fian</h2>
-    <h1>`Hello World! I'm ${name}`</h1>
+    <h1><span style="color: orange">console</span>.<span style="color: crimson">log</span>(`Hello World! I'm ${name}`)</h1>
   </body>
 </html>
