--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <title>UI Fian</title>
   </head>
-  <body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+  <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
     <h2>const name = Fian</h2>
     <h1><span style="color: orange">console</span>.<span style="color: crimson">log</span>(`Hello World! I'm ${name}`)</h1>
   </body>
